# SLIC-Posterizer

./: README.md  mem_run.sh  pyproject.toml  slicposterizer.py
slicposterizer/: slicposterizer.py
