[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SLICPosterizer"
version = "1.0"
description = "SLIC-based artistic image posterization"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Adnan Valdes", email = "github@terminus.earth" }
]
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
]

[project.urls]
"Homepage" = "https://github.com/adnanvaldes/SLIC-Posterizer"

[project.scripts]
slicposterizer = "slicposterizer:main"

[tool.uv.workspace]
members = [
    "SLIC-Posterizer",
]

[tool.setuptools]
py-modules = ["slicposterizer"]
